Cropped a couple of the images on the photos page so that all 3 columns of photo have same overall height when displayed beside each other. keyword photoLast was added as a class with a margin-bottom set to 20px, this fixed the problem of the last photos displayed on screen as joint to the footer at the bottom of the page. The padding provided now gives the page a more tidy and professional look through all screen types (e.g. iPad, Samsung Galaxy S5...)

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -136,8 +136,11 @@ html {overflow-x: hidden;}
 /*--------------------------------------------about.html body Settings*/
 .about {
     text-align: center;
-    height: 538vh;
+    background-size: cover;
     background-color: lightgray;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
     padding-top: 75px;
 }
 
@@ -222,6 +225,9 @@ html {overflow-x: hidden;}
 .background-music {
     text-align: center;
     background-size: cover;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
     background-color: lightgray;
     padding-top: 75px;
     padding-bottom: 15px;
@@ -235,6 +241,8 @@ html {overflow-x: hidden;}
     border-width: medium;
     border-radius: 50px;
     padding-top: 5px;
+    align-items: center;
+    text-align: center;
 }
 
 .boxLink:hover {
@@ -243,9 +251,7 @@ html {overflow-x: hidden;}
 
 .box_link {
     margin-top: 75px;
-    align-items: center;
-    text-align: center;
-    margin-left: 25%;
+    margin-left: 44%;
 }
 
 .list-column1 {
@@ -302,15 +308,25 @@ html {overflow-x: hidden;}
 .background-photos {
     text-align: center;
     background-size: cover;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
     background-color: lightgray;
     align-items: center;
     padding-top: 75px;
+}
+
+.photoLast {
+    margin-bottom: 20px;
 }
 
 
 /*--------------------------------------------events.html body Settings*/
 .tours-container {
     background-size: cover;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
     background-color: lightgray;
     align-items: center;
     padding-top: 75px;
@@ -335,6 +351,9 @@ html {overflow-x: hidden;}
     text-align: center;
     align-items: center;
     background-size: cover;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
     background-color: lightgray;
     padding-top: 75px;
 }
@@ -531,6 +550,9 @@ nav {
     position: relative;
     opacity: 0.85;
     background-size: cover;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
 }
 
 .important-info,
